# rust-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NOTICE  README.md  release-plz.toml
.github/actions/rust-build/: action.yml
.github/workflows/: build-decoder.yml  build.yml  format.yml  release-pr.yml  release-tmp.yml  release.yml
async-profiler-agent/: CHANGELOG.md  Cargo.toml
async-profiler-agent/examples/simple/: slow.rs
async-profiler-agent/src/asprof/: mod.rs
async-profiler-agent/src/pollcatch/: tsc.rs
async-profiler-agent/src/reporter/: mod.rs  s3.rs
decoder/: Cargo.toml
decoder/src/: main.rs
examples/: pollcatch-without-agent.rs  simple.rs
examples/simple/: main.rs  slow.rs
scripts/: ci-local.py
src/: lib.rs  profiler.rs  s3-example-custom-metadata.md  s3-example.md
src/asprof/: mod.rs  raw.rs
src/metadata/: aws.rs  mod.rs
src/pollcatch/: mod.rs
src/reporter/: local.rs  mod.rs  multi.rs  s3.rs
tests/: build-async-profiler.sh  integration.sh  separate_runtime_integration.sh  test-nativemem.jfr  test.jfr  test_pollcatch_without_agent.sh
